Sun Jun 27 05:24:00 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.2.

Sat Jun 26 16:01:26 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS.SKELETON: Template NEWS entry.

Thu Jun 24 15:19:10 GMT 2010  Olly Betts <olly@survex.com>

	* php/util.i: COMPILE_DL_XAPIAN is no longer used now we have dropped
	  PHP4 support, so remove.

Tue Jun 22 15:18:44 GMT 2010  Richard Boulton <richard@tartarus.org>

	* python/pythontest3.py,python/smoketest3.py: Update python3 tests
	  to match the changes in the python 2 versions.  (They're not
	  expected to work currently, though, due to unicode handling
	  problems with the python 3 wrappers.)

Tue Jun 22 15:17:13 GMT 2010  Richard Boulton <richard@tartarus.org>

	* python/extra.i: Remove wrapping of QueryParser.set_stemmer() and
	  TermGenerator.set_stemmer(), which isn't needed with the better
	  way of handling ownership of python stemmer subclasses which Olly
	  committed in r14742.

Tue Jun 22 13:42:27 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.1.

Tue Jun 22 13:23:49 GMT 2010  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Now get StemImplementation.cs instead of
	  SWIGTYPE_p_Xapian__StemImplementation.cs.
	* java-swig/Makefile.am: Add StemImplementation.java.

Tue Jun 22 13:22:10 GMT 2010  Olly Betts <olly@survex.com>

	* csharp/util.i,java-swig/util.i: XAPIAN_SWIG_NO_DISOWN is no longer
	  needed, so revert that.

Tue Jun 22 11:18:41 GMT 2010  Olly Betts <olly@survex.com>

	* xapian.i: We don't need to use the DISOWN typemap now.

Tue Jun 22 10:55:03 GMT 2010  Olly Betts <olly@survex.com>

	* python/extra.i: Call __disown__() on the StemImplementation rather
	  than storing a reference to it.

Tue Jun 22 10:19:49 GMT 2010  Olly Betts <olly@survex.com>

	* python/smoketest2.py: Add coverage for wrapping the same MyStemmer
	  in a xapian.Stem more than once.

Tue Jun 22 10:17:23 GMT 2010  Olly Betts <olly@survex.com>
