@@ -129,12 +129,13 @@ files needed for developing and running C# applications which use Xapian.
 %setup -q -n %{name}-%{version}
 
 %build
-# FC6 (at least) has a patched libtool which knows not to set rpath for
-# /usr/lib64, which upstream libtool fails to do currently.  We can drop
-# this "autoreconf --force" and the "BuildRequires:" for the autotools
-# once upstream libtool is fixed.  Note: this overwrites INSTALL, but
-# that doesn't matter here as we don't package it.
-autoreconf --force
+# As of 1.1.0, Xapian uses libtool 2.2.x which allows us to override libtool's
+# sometimes conservative take on which directories are in the default dynamic
+# linker search path, so we no longer incorrectly try to set rpath for
+# /usr/lib64.  Hence there's no longer a need to run "autoreconf --force" here
+# and it's better not to as it avoids having to cope with incompatibilities
+# with older versions of the autotools which older distros have.
+#autoreconf --force
 # Only build the bindings we want.
 %configure %{?!_without_python:--with-python} %{?!_without_php:--with-php} %{?!_without_tcl8:--with-tcl} %{?!_without_csharp:--with-csharp} %{?!_without_ruby:--with-ruby}
 make
